--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
     <modules>
         <module>dispatcher</module>
         <module>common-rabbitmq</module>
+        <module>node</module>
     </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <telegrambot.starter.version>6.3.0</telegrambot.starter.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
