--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>node</module>
         <module>common-jpa</module>
         <module>rest-service</module>
+        <module>common-utils</module>
+        <module>mail-service</module>
     </modules>
 
     <properties>
@@ -28,9 +30,9 @@
     </parent>
     <dependencies>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
